--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,14 @@ install:
 
 script:
   - npm run build
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  local_dir: dist/
+  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep_history: true
+  name: zy1281539626
+  email: 1511455676@qq.com
+  on:
+    branch: master
